# miktest1

./: .env  .env.sample  .replit  .replit.workflow  Dockerfile  INSTALLATION.md  README.md  app-server.workflow  app.py  create_admin.py  dependencies.txt  docker-compose.yml  docker-entrypoint.sh  extend_module.sh  flask-app-new.workflow  flask-app.workflow  flask-server.sh  flask-server.workflow  flask_app.workflow  flask_server.sh  flask_server_new.workflow  gunicorn-server.workflow  install.sh  install_module.py  install_ubuntu_24.04.sh  install_windows.ps1  main.py  mikrotik-monitor.workflow  mikrotik-server.sh  mikrotik-server.workflow  models.py  pyproject.toml  replit.nix  run-flask.workflow  run.py  run_gunicorn.sh  run_server.py  simple-flask.workflow  simple_flask_server.py  simple_server.py  (+2 more)
analysis/mik/app/: __init__.py  config.py
analysis/mik/instance/: mikrotik_monitor.db
analyzers/: __init__.py  generic_analyzer.py  java_analyzer.py  js_analyzer.py  python_analyzer.py
instance/: mikrotik_monitor.db
mik/: __init__.py
mik/app/: __init__.py  config.py  mikrotik.py  models.py  routes.py
mik/app/api/: auth.py  devices.py  monitoring.py  topology.py
mik/app/core/: discovery.py  mikrotik.py
mik/app/database/: crud.py  models.py  (+1 more)
static/: styles.css
static/css/: loading-animations.css
static/js/: loading-animations.js  vpn_monitoring.js
templates/: base.html  dashboard.html  device_form.html  devices.html  index.html  login.html  report.html  vpn_monitoring.html
utils/: __init__.py  file_operations.py  git_operations.py  report_generator.py
(+44 files in other folders)
