[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "cryptography>=44.0.2",
    "flask-socketio>=5.5.1",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "flask-jwt-extended>=4.7.1",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "librouteros>=3.4.1",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.39",
    "werkzeug>=3.1.3",
    "wtforms>=3.2.1",
    "netifaces>=0.11.0",
]
