[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "cryptography==41.0.5",
    "flask-socketio>=5.5.1",
    "flask==3.0.0",
    "flask-cors==4.0.0",
    "flask-jwt-extended>=4.7.1",
    "flask-login==0.6.3",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.1",
    "gunicorn>=23.0.0",
    "librouteros>=3.4.1",
    "python-dotenv==1.0.0",
    "sqlalchemy==2.0.23",
    "werkzeug==3.0.1",
    "wtforms>=3.2.1",
    "netifaces>=0.11.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "pyjwt>=2.10.1",
    "bcrypt>=4.3.0",
    "sqlalchemy-utils>=0.41.2",
    "flask-migrate>=4.1.0",
]
